--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
         </div>
        </div>
        <div id="delivery-type">
-        <div class="delivery-container"><input type="radio" name="delivery" id="delivery-runner"><label for="delivery-runner"><p>deliver by runner (delivery fee applied)</p></label></div>
+        <div class="delivery-container"><input type="radio" name="delivery" id="delivery-runner"><label for="delivery-runner"></p>deliver by runner (delivery fee applied)</p></label></div>
         <div class="delivery-container"><input type="radio" name="delivery" id="self-collect"><label for="self-collect"><p>self collect "R314" (no fee)</p></label></div>
        </div>
        <div class="delivery-details">
         <div class="delivery-runner-details">
-            <div class="delivery-container"><input type="radio" name="location-type" id="dn"><label for="dn"><p>Desasiswa Nurani</p></label></div>
-            <div class="delivery-container"><input type="radio" name="location-type" id="cafe-nurani"><label for="cafe-nurani"><p>cafe nurani</p></label></div>
-            <div class="delivery-cy"ontainer"><input type="radio" name="location-type" id="custom"><label for="custom"><p>custom delivery location</p></label></div>
+            <div class="wrapper">
+                <div class="left">
+                    <div class="delivery-container"><input type="radio" name="location-type" id="dn"><label for="dn"><p>Desasiswa Nurani</p></label></div>
+                    <div class="delivery-container"><input type="radio" name="location-type" id="cafe-nurani"><label for="cafe-nurani"><p>cafe nurani</p></label></div>
+                    <div class="delivery-container"><input type="radio" name="location-type" id="custom"><label for="custom"><p>custom delivery location</p></label></div>
+                </div>
             <input type="datetime-local" name="datetime" id="datetime"><p>*delivery may delay sometimes</p>
             <textarea name="message" id="message" cols="25" rows="10" placeholder="your message to the runner">Your message : </textarea>
-
+            </div>
         </div>
         <div class="delivery-self-details">
         <div class="wrapper">
@@ -51,7 +54,8 @@
        <div class="total-bill">
         <p>total : <span class="total">//</span></p>
        </div>
-       <div class="push"><input type="submit" value="Place order"></div>
+       <div id="push"><input type="submit" value="Place order"></div>
     </form>
+    <script src="script.js"></script>    
 </body>
 </html>
