add calculation, customLocation.required condition

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
        <div id="list-product">
         <div class="card">
-            <label id="ori" for="original"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/products/HG37xyzpEgvZpYLX_0eb44159-7556-4a85-a639-23129c7bdb40.jpg?v=1708018955&width=360" alt="samyang original"></label>
+            <label for="original"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/products/HG37xyzpEgvZpYLX_0eb44159-7556-4a85-a639-23129c7bdb40.jpg?v=1708018955&width=360" alt="samyang original"></label>
             <input type="number" min="0" name="order" id="original" placeholder="original">
         </div>
         <div class="card">
-            <label id="cheese" for="cheese"><img src="https://k-ramen.eu/cdn/shop/products/UDkbT9eMFjSRM29P_a99fc525-649d-482d-8aea-5b8ba5950060.jpg?v=1708423928&width=713" alt="cheese"></label>
+            <label for="cheese"><img src="https://k-ramen.eu/cdn/shop/products/UDkbT9eMFjSRM29P_a99fc525-649d-482d-8aea-5b8ba5950060.jpg?v=1708423928&width=713" alt="cheese"></label>
             <input type="number" min="0" name="order" id="cheese" placeholder="cheese">
         </div>
         <div class="card">
-            <label id="carbonara" for="carbonara"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/files/samyang-buldak-chicken-carbonara-130-gr_2e67104d-a0c0-4c3c-9082-93288274bdf2.jpeg?v=1712318683&width=360" alt="carbonara"></label>
+            <label for="carbonara"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/files/samyang-buldak-chicken-carbonara-130-gr_2e67104d-a0c0-4c3c-9082-93288274bdf2.jpeg?v=1712318683&width=360" alt="carbonara"></label>
             <input type="number" min="0" name="order" id="carbonara" placeholder="carbonara">
         </div>
        </div>
@@ -52,7 +52,7 @@
         </div></div>
        
        <div class="total-bill">
-        <p>total : <span class="total">//</span></p>
+        <p>total : <span id="total">//</span></p>
        </div>
        <div id="push"><input type="submit" value="Place order"></div>
     </form>
