add required to name and phone-num

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <form action="https://script.google.com/macros/s/AKfycbz9IdjU6GMP0Nf3Wqdpy_3Dw-b4lCkjG_HkHNN6AdIMmI9WRzZa2qie0ZToSQWOm_oU-w/exec">
        <div id="unique-indentifier" class="center">
-        <input type="text" name="name" id="name"  placeholder="name">
+        <input type="text" required name="name" id="name"  placeholder="name">
         <input type="email" name="email" id="email"  placeholder="email">
-        <input type="tel" name="phone-num" id="phone-num"  placeholder="phone number">
+        <input type="tel" required name="phone-num" id="phone-num"  placeholder="phone number">
         </div>
        <div id="list-product">
         <div class="card">
