--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Kenny Rogers Samyang</title>
 </head>
 <body>
-    <form action="https://script.google.com/macros/s/AKfycbz9IdjU6GMP0Nf3Wqdpy_3Dw-b4lCkjG_HkHNN6AdIMmI9WRzZa2qie0ZToSQWOm_oU-w/exec">
+    <div id="logo"><h1 id="brand">KennyRogers</h1><h1 id="product">Samyang</h1></div>
+    <form id="myForm" action="https://script.google.com/macros/s/AKfycbz9IdjU6GMP0Nf3Wqdpy_3Dw-b4lCkjG_HkHNN6AdIMmI9WRzZa2qie0ZToSQWOm_oU-w/exec">
        <div id="unique-indentifier" class="center">
-        <input type="text" required name="name" id="name"  placeholder="name">
-        <input type="email" name="email" id="email"  placeholder="email">
-        <input type="tel" required name="phone-num" id="phone-num"  placeholder="phone number">
+        <input type="text" required name="name" id="name"  placeholder=" name">
+        <input type="email" name="email" id="email"  placeholder=" email">
+        <input type="tel" required name="phone-num" id="phone-num"  placeholder=" phone number">
         </div>
        <div id="list-product">
         <div class="card">
@@ -29,17 +30,17 @@
         </div>
        </div>
        <div id="delivery-type">
-        <div class="delivery-container"><input type="radio" required name="delivery" id="delivery-runner" value="by-runner"><label for="delivery-runner"></p>deliver by runner (delivery fee applied)</p></label></div>
-        <div class="delivery-container"><input type="radio" name="delivery" id="self-collect" value="self-collect"><label for="self-collect"><p>self collect "R314" (no fee)</p></label></div>
+        <div class="delivery-container pick"><input type="radio" required name="delivery" id="delivery-runner" value="by-runner"><label for="delivery-runner"></p>deliver by runner (delivery fee applied)</p></label></div>
+        <div class="delivery-container pick"><input type="radio" name="delivery" id="self-collect" value="self-collect"><label for="self-collect"><p>self collect "R323" (no fee)</p></label></div>
        </div>
        <div class="delivery-details">
         <div class="delivery-runner-details">
             <div class="wrapper">
                 <div class="left">
-                    <div class="delivery-container"><input type="radio" name="location-type" value="dn" id="dn"><label for="dn"><p>Desasiswa Nurani</p></label></div>
-                    <div class="delivery-container"><input type="radio" name="location-type" value="cafe-nurani" id="cafe-nurani"><label for="cafe-nurani"><p>cafe nurani</p></label></div>
-                    <div class="delivery-container"><input type="radio" name="location-type" value="custom" id="custom"><label for="custom"><p>custom delivery location</p></label></div>
-                    <input type="text" name="location-details" placeholder="--specify/custom location--" id="custom-location">
+                    <div class="delivery-container"><input type="radio" name="location-type" value="dn" id="dn"><label for="dn"><p>Desasiswa Nurani (rm0.50)</p></label></div>
+                    <div class="delivery-container"><input type="radio" name="location-type" value="cafe-nurani" id="cafe-nurani"><label for="cafe-nurani"><p>cafe nurani (+rm0.50)</p></label></div>
+                    <div class="delivery-container"><input type="radio" name="location-type" value="custom" id="custom"><label for="custom"><p>custom delivery location (+rm1.00)</p></label></div>
+                    <div class="wrap-center"><input type="text" name="location-details" placeholder="--specify/custom location--" id="custom-location"></div>
                 </div>
             <div class="delivery-container">Time : <input type="datetime-local" name="datetime" id="datetime-runner"></div><p>*delivery may delay sometimes</p>
             <textarea name="message" id="message" cols="25" rows="10" placeholder="your message"></textarea>
