update img format

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div>
        <div id="list-product">
         <div class="card">
-            <label for="original"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/products/HG37xyzpEgvZpYLX_0eb44159-7556-4a85-a639-23129c7bdb40.jpg?v=1708018955&width=360" alt="samyang original"></label>
+            <label for="original"><img src="https://d2561m9frc8eu1.cloudfront.net/13408-large_default/samyang-ramen-hot-chicken-original-140g-x-5.jpg" alt="samyang original"></label>
             <input type="number" min="0" name="original" id="original" placeholder="original">
         </div>
         <div class="card">
-            <label for="cheese"><img src="https://k-ramen.eu/cdn/shop/products/UDkbT9eMFjSRM29P_a99fc525-649d-482d-8aea-5b8ba5950060.jpg?v=1708423928&width=713" alt="cheese"></label>
+            <label for="cheese"><img src="https://cafe24img.poxo.com/beautyboxkorea/web/product/big/SAMYANG-Hot-Chicken-Flavor-Ramen-Cheese-140g.jpg" alt="cheese"></label>
             <input type="number" min="0" name="cheese" id="cheese" placeholder="cheese">
         </div>
         <div class="card">
-            <label for="carbonara"><img src="https://cdn.shopify.com/s/files/1/0620/7235/7116/files/samyang-buldak-chicken-carbonara-130-gr_2e67104d-a0c0-4c3c-9082-93288274bdf2.jpeg?v=1712318683&width=360" alt="carbonara"></label>
+            <label for="carbonara"><img src="https://cdn.pgmall.my/image/cache/catalog/seller_store/store25625/product/65b96b926d05cmy-11134207-7r98s-lod4d185rady77-400x400.jpeg" alt="carbonara"></label>
             <input type="number" min="0" name="carbonara" id="carbonara" placeholder="carbonara">
         </div>
        </div>
