--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
        <div class="total-bill">
         <p>total : <span id="total" name="total"></span></p>
        </div>
+       <p id="last">*total price not include delivery fee</p>
        <div id="push"><input type="submit" value="Place order"></div>
     </form>
     <script src="script.js"></script>    
