--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
        </div>
        <div id="delivery-type">
-        <div class="delivery-container pick"><input type="radio" required name="delivery" id="delivery-runner" value="by-runner"><label for="delivery-runner"></p>deliver by runner (delivery fee applied)</p></label></div>
-        <div class="delivery-container pick"><input type="radio" name="delivery" id="self-collect" value="self-collect"><label for="self-collect"><p>self collect "R323" (no fee)</p></label></div>
+        <div class="delivery-container pick"><input type="radio" required name="delivery" id="delivery-runner" value="by-runner"><label for="delivery-runner"></p> deliver by runner (delivery fee applied)</p></label></div>
+        <div class="delivery-container pick"><input type="radio" name="delivery" id="self-collect" value="self-collect"><label for="self-collect"><p> self collect DN Putera"R323" (no fee)</p></label></div>
        </div>
        <div class="delivery-details">
         <div class="delivery-runner-details">
@@ -56,9 +56,11 @@
        <div class="total-bill">
         <p>total : <span id="total" name="total"></span></p>
        </div>
-       <p id="last">*total price not include delivery fee</p>
+       <p class="last">*total price not include delivery fee</p>
+       <p class="last">*price is for per unit item</p>
        <div id="push"><input type="submit" value="Place order"></div>
     </form>
+    <footer>Need help? <a href="mailto:skillhunter01@gmail.com">contact us by email</a></footer>
     <script src="script.js"></script>    
 </body>
 </html>
