--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        <p class="last">*price is for per unit item</p>
        <div id="push"><input type="submit" value="Place order"></div>
     </form>
-    <footer>Need help? <a href="mailto:skillhunter01@gmail.com">contact us by email</a></footer>
+    <footer>Need help? contact us by <a href="mailto:skillhunter01@gmail.com">email</a> or <a href="">whatsapp</a></footer>
     <script src="script.js"></script>    
 </body>
 </html>
