--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Kenny Rogers Samyang</title>
+    <title>Kenny Rogers Ramen</title>
 </head>
 <body>
-    <div id="logo"><h1 id="brand">KennyRogers</h1><h1 id="product">Samyang</h1></div>
+    <div id="logo"><h1 id="brand">KennyRogers</h1><h1 id="product">Ramen</h1></div>
     <form id="myForm" action="https://script.google.com/macros/s/AKfycbz9IdjU6GMP0Nf3Wqdpy_3Dw-b4lCkjG_HkHNN6AdIMmI9WRzZa2qie0ZToSQWOm_oU-w/exec">
        <div id="unique-indentifier" class="center">
         <input type="text" required name="name" id="name"  placeholder=" name">
@@ -18,15 +18,15 @@
        <div id="list-product">
         <div class="card">
             <label for="original"><img src="https://d2561m9frc8eu1.cloudfront.net/13408-large_default/samyang-ramen-hot-chicken-original-140g-x-5.jpg" alt="samyang original"></label>
-            <input type="number" min="0" name="original" id="original" placeholder="original">
+            <input type="number" min="0" name="original" id="original" placeholder="original(eg.1)">
         </div>
         <div class="card">
             <label for="cheese"><img src="https://cafe24img.poxo.com/beautyboxkorea/web/product/big/SAMYANG-Hot-Chicken-Flavor-Ramen-Cheese-140g.jpg" alt="cheese"></label>
-            <input type="number" min="0" name="cheese" id="cheese" placeholder="cheese">
+            <input type="number" min="0" name="cheese" id="cheese" placeholder="cheese(eg.1)">
         </div>
         <div class="card">
             <label for="carbonara"><img src="https://cdn.pgmall.my/image/cache/catalog/seller_store/store25625/product/65b96b926d05cmy-11134207-7r98s-lod4d185rady77-400x400.jpeg" alt="carbonara"></label>
-            <input type="number" min="0" name="carbonara" id="carbonara" placeholder="carbonara">
+            <input type="number" min="0" name="carbonara" id="carbonara" placeholder="carbonara(eg.1)">
         </div>
        </div>
        <div id="delivery-type">
@@ -37,10 +37,10 @@
         <div class="delivery-runner-details">
             <div class="wrapper">
                 <div class="left">
-                    <div class="delivery-container"><input type="radio" name="location-type" value="dn" id="dn"><label for="dn"><p>Desasiswa Nurani (rm0.50)</p></label></div>
+                    <div class="delivery-container"><input type="radio" name="location-type" value="dn" id="dn"><label for="dn"><p>Desasiswa Nurani (+rm0.50)</p></label></div>
                     <div class="delivery-container"><input type="radio" name="location-type" value="cafe-nurani" id="cafe-nurani"><label for="cafe-nurani"><p>cafe nurani (+rm0.50)</p></label></div>
                     <div class="delivery-container"><input type="radio" name="location-type" value="custom" id="custom"><label for="custom"><p>custom delivery location (+rm1.00)</p></label></div>
-                    <div class="wrap-center"><input type="text" name="location-details" placeholder="--specify/custom location--" id="custom-location"></div>
+                    <div class="margin-auto">Place :<input type="text" name="location-details" placeholder="--specify location (eg.masjid)--" id="custom-location"></div>
                 </div>
             <div class="delivery-container">Time : <input type="datetime-local" name="datetime" id="datetime-runner"></div><p>*delivery may delay sometimes</p>
             <textarea name="message" id="message" cols="25" rows="10" placeholder="your message"></textarea>
@@ -56,11 +56,14 @@
        <div class="total-bill">
         <p>total : <span id="total" name="total"></span></p>
        </div>
+       <div class="disclaimer">
        <p class="last">*total price not include delivery fee</p>
        <p class="last">*price is for per unit item</p>
+       <p class="last">*cash/transfer on delivery</p>
+       </div>
        <div id="push"><input type="submit" value="Place order"></div>
     </form>
-    <footer>Need help? contact us by <a href="mailto:skillhunter01@gmail.com">email</a> or <a href="">whatsapp</a></footer>
+    <footer>Need help? contact us by <a href="mailto:skillhunter01@gmail.com">email</a> or <a href="https://wa.link/esdgwy">whatsapp</a></footer>
     <script src="script.js"></script>    
 </body>
 </html>
